# ITMO

./: .gitignore  README.md
AEA/: .pre-commit-config.yaml  lab1.ipynb  lab2.ipynb  lab4.ipynb  lab5.ipynb  pyproject.toml
AML/: Dockerfile  README.md  gui.py  pyproject.toml  train.py
AML/notebooks/: lab1.ipynb
AML/weights/: state.json
DML/: .gitignore  README.md  featurizer.py  main.py  pyproject.toml  stopwords.txt
DML/data/: Data_Test_original.csv  __init__.py  utils.py
DML/models/: __init__.py  abc_encoder.py  additive.py  audio_encoder.py  audio_preprocessor.py  conformer.py  cross_attn.py  dummy_net.py  early_mm.py  late_mm.py  lightning_module.py  text_encoder.py  video_encoder.py
DML/notebooks/: analysis.ipynb  plots.ipynb
DSP/: .gitignore  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab7.ipynb  lab8.ipynb  lab9.ipynb  pyproject.toml
DSSP/: LabWork1.ipynb  LabWork2.ipynb  LabWork3_v5.ipynb  LabWork4.ipynb  LabWork5.ipynb  LabWork6.ipynb
IIML/: pyproject.toml
IIML/lab/: lab_4.ipynb  lab_5.ipynb  lab_6.ipynb  lab_7.ipynb
IIPL/: hard_fst.py  hard_snd.py  hard_trd.py  medium_fst.py  medium_snd.py  medium_trd.py  very_hard_fst.py  very_hard_snd.py  very_hard_trd.py
NLP/: lab11.ipynb  lab12.ipynb  lab1_class.ipynb  lab2.ipynb  lab3.ipynb  new_pp.toml  pyproject.toml
