[project]
name = "dsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipykernel>=7.0.1, <7.1",
    "librosa>=0.11.0,<1.0",
    "matplotlib>=3.10.7, <3.11",
    "numpy>=2.3.4, <2.4",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
      "F",
      "E",
      "W",
      "I",
      "UP", # Warn if certain things can changed due to newer Python versions
      "C4", # Catch incorrect use of comprehensions
      "ISC001", # Implicitly concatenated string literals on one line
      "ICN", # Use common import conventions
      "RET", # Return practices
      "SIM", # Simplification rules
      
]
ignore = [
      "E741",  # allow "l" as a variable name
      "N803"   # uppercase
]
task-tags = ["TODO"]
