[project]
name = "iiml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipykernel>=6.30.1, <7.0",
    "matplotlib>=3.10.6, <3.11",
    "nbformat>=5.10.4, <5.11",
    "pandas>=2.3.3, <2.4",
    "plotly>=6.3.0, < 6.4",
    "ruff>=0.13.2, <0.14",
    "scikit-learn>=1.7.2, <1.8",
    "seaborn>=0.13.2, <0.14",
    "tqdm>=4.67.1, <4.68",
]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
      "F",
      "E",
      "W",
      "I",
      "UP", # Warn if certain things can changed due to newer Python versions
      "C4", # Catch incorrect use of comprehensions
      "ISC001", # Implicitly concatenated string literals on one line
      "ICN", # Use common import conventions
      "RET", # Return practices
      "SIM", # Simplification rules
      "PTH", # Pathlib instead of os.path
      "NPY"  # NumPy things
      
]
ignore = [
      "E741",  # allow "l" as a variable name
      "N803"   # uppercase
]
task-tags = ["TODO"]
